feat: add movie reactions (emojis)
