# controllers/activityController.js
@@ -1,6 +1,7 @@
 const catchAsync = require('../utils/catchAsync');
 const AppError = require('../utils/appError');
 const UserMovieActivity = require('../models/userMovieActivityModel');
+const MovieReaction = require('../models/movieReactionModel');
 const Movie = require('../models/movieModel');
 const User = require('../models/userModel');
 const { getOrCreateMovie } = require('../services/movieService');
@@ -105,6 +106,83 @@ exports.toggleActivity = catchAsync(async (req, res, next) => {
   });
 });
 
+exports.toggleReaction = catchAsync(async (req, res, next) => {
+  const { reactionType, tmdbId } = req.body;
+  const userId = req.user.id;
+
+  const allowedReactions = [
+    'fire',
+    'mindblown',
+    'crying',
+    'laughing',
+    'eyesWithHearts',
+  ];
+
+  if (!allowedReactions.includes(reactionType)) {
+    return next(new AppError('Invalid reaction type', 400));
+  }
+
+  const movie = await getOrCreateMovie(tmdbId);
+
+  const existingReaction = await MovieReaction.findOne({
+    user: userId,
+    movie: movie._id,
+  });
+
+  let message;
+  let currentReaction = null;
+
+  if (!existingReaction) {
+    await MovieReaction.create({
+      user: userId,
+      movie: movie._id,
+      reactionType,
+    });
+
+    await Movie.findByIdAndUpdate(movie._id, {
+      $inc: { [`reactionCounts.${reactionType}`]: 1 },
+    });
+
+    message = 'Reaction added';
+    currentReaction = reactionType;
+  } else if (existingReaction.reactionType === reactionType) {
+    await MovieReaction.findByIdAndDelete(existingReaction._id);
+
+    await Movie.findByIdAndUpdate(movie._id, {
+      $inc: { [`reactionCounts.${reactionType}`]: -1 },
+    });
+
+    message = 'Reaction removed';
+    currentReaction = null;
+  } else {
+    const oldReaction = existingReaction.reactionType;
+
+    existingReaction.reactionType = reactionType;
+    await existingReaction.save();
+
+    await Movie.findByIdAndUpdate(movie._id, {
+      $inc: {
+        [`reactionCounts.${oldReaction}`]: -1,
+        [`reactionCounts.${reactionType}`]: 1,
+      },
+    });
+
+    message = 'Reaction changed';
+    currentReaction = reactionType;
+  }
+
+  const updatedMovie = await Movie.findById(movie._id);
+
+  res.status(200).json({
+    status: 'success',
+    data: {
+      message,
+      currentReaction,
+      reactionCounts: updatedMovie.reactionCounts,
+    },
+  });
+});
+
 exports.checkMovieStatus = catchAsync(async (req, res) => {
   const { tmdbId } = req.params;
   const userId = req.user.id;
@@ -123,9 +201,16 @@ exports.checkMovieStatus = catchAsync(async (req, res) => {
     movie: movie._id,
   });
 
+  const reaction = await MovieReaction.findOne({
+    user: userId,
+    movie: movie._id,
+  });
+
   const status = {
     liked: activities.some((activity) => activity.activityType === 'liked'),
     watched: activities.some((activity) => activity.activityType === 'watched'),
+    currentReaction: reaction ? reaction.reactionType : null,
+    reactionCounts: movie.reactionCounts,
   };
 
   res.status(200).json({
